data processing completed

--- a/notebooks/00_model_bias.ipynb
+++ b/notebooks/00_model_bias.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -81,52 +81,24 @@
        "      <td>CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>CCCN1C(C2=CN=C(NC3=CC=C(C)N=C3)C(Cl)=C2)=NC2=C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>CN(CC1=CC=CC2=CC=CC=C12)CN1N=C(C2=CC=NC=C2)OC1=O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>O=C(N[C@@H](CSCC1=CC=CC=C1)C(=O)NC1=CC=C(C2S/C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>CN1CC[C@]23CCCC[C@H]2[C@H]1CC1=CC=C(OC2=CC=CC=...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>O=C(CN1C(=O)/C(=C/C2=CC=CO2)SC1=S)NC1=CC=C(C(=...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>CN1C(=O)C2=C(N=C(N3CCC[C@@H](N)C3)N2CC2=CC(F)=...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                smiles\n",
-       "0                         CCCCNC(=S)N/N=C/C1=C(C)C=CS1\n",
-       "1           CN1C(SCC2=NC(C3=CC=CS3)=NO2)=NN=C1C1CCCCC1\n",
-       "2             O=C(O)CC(NC(=O)C1=CN=CC=N1)C1=CC=CC=C1Cl\n",
-       "3    O=S(=O)(C1=CC=CC=C1)N1CCN(C2=NOC3=CC=CC(Cl)=C2...\n",
-       "4    CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...\n",
-       "..                                                 ...\n",
-       "995  CCCN1C(C2=CN=C(NC3=CC=C(C)N=C3)C(Cl)=C2)=NC2=C...\n",
-       "996   CN(CC1=CC=CC2=CC=CC=C12)CN1N=C(C2=CC=NC=C2)OC1=O\n",
-       "997  O=C(N[C@@H](CSCC1=CC=CC=C1)C(=O)NC1=CC=C(C2S/C...\n",
-       "998  CN1CC[C@]23CCCC[C@H]2[C@H]1CC1=CC=C(OC2=CC=CC=...\n",
-       "999  O=C(CN1C(=O)/C(=C/C2=CC=CO2)SC1=S)NC1=CC=C(C(=...\n",
-       "\n",
-       "[1000 rows x 1 columns]"
+       "                                              smiles\n",
+       "0                       CCCCNC(=S)N/N=C/C1=C(C)C=CS1\n",
+       "1         CN1C(SCC2=NC(C3=CC=CS3)=NO2)=NN=C1C1CCCCC1\n",
+       "2           O=C(O)CC(NC(=O)C1=CN=CC=N1)C1=CC=CC=C1Cl\n",
+       "3  O=S(=O)(C1=CC=CC=C1)N1CCN(C2=NOC3=CC=CC(Cl)=C2...\n",
+       "4  CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...\n",
+       "5  CN1C(=O)C2=C(N=C(N3CCC[C@@H](N)C3)N2CC2=CC(F)=..."
       ]
      },
-     "execution_count": 119,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +106,7 @@
    "source": [
     "# In this codeblock I will load the data from the /data folder to a Pandas dataframe and understand which headers it has\n",
     "df = pd.read_csv('../data/input.csv', delimiter=',')\n",
-    "df"
+    "df.head(6)"
    ]
   },
   {
@@ -230,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[03:47:42] Can't kekulize mol.  Unkekulized atoms: 3 7\n"
+      "[04:10:52] Can't kekulize mol.  Unkekulized atoms: 3 7\n"
      ]
     },
     {
@@ -269,142 +241,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "During SMILES standardization, the code uses RDKit to convert each string into a molecular structure. However, some SMILES might be invalid for RDKit to handle, resulting in NaN values. This could be the case for the three SMILES strings causing NaN outputs."
+    "##### During SMILES standardization, the code uses RDKit to convert each string into a molecular structure. However, some SMILES might be invalid for RDKit to handle, resulting in NaN values. This could be the case for the three SMILES strings causing NaN outputs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>smiles</th>\n",
-       "      <th>standardised_smiles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CCCCNC(=S)N/N=C/C1=C(C)C=CS1</td>\n",
-       "      <td>CCCCNC(=S)N/N=C/c1sccc1C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CN1C(SCC2=NC(C3=CC=CS3)=NO2)=NN=C1C1CCCCC1</td>\n",
-       "      <td>Cn1c(SCc2nc(-c3cccs3)no2)nnc1C1CCCCC1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>O=C(O)CC(NC(=O)C1=CN=CC=N1)C1=CC=CC=C1Cl</td>\n",
-       "      <td>O=C(O)CC(NC(=O)c1cnccn1)c1ccccc1Cl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>O=S(=O)(C1=CC=CC=C1)N1CCN(C2=NOC3=CC=CC(Cl)=C2...</td>\n",
-       "      <td>O=S(=O)(c1ccccc1)N1CCN(c2noc3cccc(Cl)c23)CC1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...</td>\n",
-       "      <td>CCC[C@@H](C)N(c1cc(Cl)ccc1CO)S(=O)(=O)c1ccc(C)cc1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>CCCN1C(C2=CN=C(NC3=CC=C(C)N=C3)C(Cl)=C2)=NC2=C...</td>\n",
-       "      <td>CCCn1c(-c2cnc(Nc3ccc(C)nc3)c(Cl)c2)nc2cccc(Cl)c21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>CN(CC1=CC=CC2=CC=CC=C12)CN1N=C(C2=CC=NC=C2)OC1=O</td>\n",
-       "      <td>CN(Cc1cccc2ccccc12)Cn1nc(-c2ccncc2)oc1=O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>O=C(N[C@@H](CSCC1=CC=CC=C1)C(=O)NC1=CC=C(C2S/C...</td>\n",
-       "      <td>O=C(N[C@@H](CSCc1ccccc1)C(=O)Nc1ccc(C2S/C(=N\\c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>CN1CC[C@]23CCCC[C@H]2[C@H]1CC1=CC=C(OC2=CC=CC=...</td>\n",
-       "      <td>CN1CC[C@]23CCCC[C@H]2[C@H]1Cc1ccc(Oc2ccccc2F)cc13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>O=C(CN1C(=O)/C(=C/C2=CC=CO2)SC1=S)NC1=CC=C(C(=...</td>\n",
-       "      <td>O=C(CN1C(=O)/C(=C/c2ccco2)SC1=S)Nc1ccc(C(=O)O)...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                smiles  \\\n",
-       "0                         CCCCNC(=S)N/N=C/C1=C(C)C=CS1   \n",
-       "1           CN1C(SCC2=NC(C3=CC=CS3)=NO2)=NN=C1C1CCCCC1   \n",
-       "2             O=C(O)CC(NC(=O)C1=CN=CC=N1)C1=CC=CC=C1Cl   \n",
-       "3    O=S(=O)(C1=CC=CC=C1)N1CCN(C2=NOC3=CC=CC(Cl)=C2...   \n",
-       "4    CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...   \n",
-       "..                                                 ...   \n",
-       "995  CCCN1C(C2=CN=C(NC3=CC=C(C)N=C3)C(Cl)=C2)=NC2=C...   \n",
-       "996   CN(CC1=CC=CC2=CC=CC=C12)CN1N=C(C2=CC=NC=C2)OC1=O   \n",
-       "997  O=C(N[C@@H](CSCC1=CC=CC=C1)C(=O)NC1=CC=C(C2S/C...   \n",
-       "998  CN1CC[C@]23CCCC[C@H]2[C@H]1CC1=CC=C(OC2=CC=CC=...   \n",
-       "999  O=C(CN1C(=O)/C(=C/C2=CC=CO2)SC1=S)NC1=CC=C(C(=...   \n",
-       "\n",
-       "                                   standardised_smiles  \n",
-       "0                             CCCCNC(=S)N/N=C/c1sccc1C  \n",
-       "1                Cn1c(SCc2nc(-c3cccs3)no2)nnc1C1CCCCC1  \n",
-       "2                   O=C(O)CC(NC(=O)c1cnccn1)c1ccccc1Cl  \n",
-       "3         O=S(=O)(c1ccccc1)N1CCN(c2noc3cccc(Cl)c23)CC1  \n",
-       "4    CCC[C@@H](C)N(c1cc(Cl)ccc1CO)S(=O)(=O)c1ccc(C)cc1  \n",
-       "..                                                 ...  \n",
-       "995  CCCn1c(-c2cnc(Nc3ccc(C)nc3)c(Cl)c2)nc2cccc(Cl)c21  \n",
-       "996           CN(Cc1cccc2ccccc12)Cn1nc(-c2ccncc2)oc1=O  \n",
-       "997  O=C(N[C@@H](CSCc1ccccc1)C(=O)Nc1ccc(C2S/C(=N\\c...  \n",
-       "998  CN1CC[C@]23CCCC[C@H]2[C@H]1Cc1ccc(Oc2ccccc2F)cc13  \n",
-       "999  O=C(CN1C(=O)/C(=C/c2ccco2)SC1=S)Nc1ccc(C(=O)O)...  \n",
-       "\n",
-       "[1000 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +307,7 @@
        "freq                               1                         1"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -555,72 +397,27 @@
        "      <td>CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...</td>\n",
        "      <td>CCC[C@@H](C)N(c1cc(Cl)ccc1CO)S(=O)(=O)c1ccc(C)cc1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>992</th>\n",
-       "      <td>CCCN1C(C2=CN=C(NC3=CC=C(C)N=C3)C(Cl)=C2)=NC2=C...</td>\n",
-       "      <td>CCCn1c(-c2cnc(Nc3ccc(C)nc3)c(Cl)c2)nc2cccc(Cl)c21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>993</th>\n",
-       "      <td>CN(CC1=CC=CC2=CC=CC=C12)CN1N=C(C2=CC=NC=C2)OC1=O</td>\n",
-       "      <td>CN(Cc1cccc2ccccc12)Cn1nc(-c2ccncc2)oc1=O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>994</th>\n",
-       "      <td>O=C(N[C@@H](CSCC1=CC=CC=C1)C(=O)NC1=CC=C(C2S/C...</td>\n",
-       "      <td>O=C(N[C@@H](CSCc1ccccc1)C(=O)Nc1ccc(C2S/C(=N\\c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>CN1CC[C@]23CCCC[C@H]2[C@H]1CC1=CC=C(OC2=CC=CC=...</td>\n",
-       "      <td>CN1CC[C@]23CCCC[C@H]2[C@H]1Cc1ccc(Oc2ccccc2F)cc13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>O=C(CN1C(=O)/C(=C/C2=CC=CO2)SC1=S)NC1=CC=C(C(=...</td>\n",
-       "      <td>O=C(CN1C(=O)/C(=C/c2ccco2)SC1=S)Nc1ccc(C(=O)O)...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>997 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                smiles  \\\n",
-       "0                         CCCCNC(=S)N/N=C/C1=C(C)C=CS1   \n",
-       "1           CN1C(SCC2=NC(C3=CC=CS3)=NO2)=NN=C1C1CCCCC1   \n",
-       "2             O=C(O)CC(NC(=O)C1=CN=CC=N1)C1=CC=CC=C1Cl   \n",
-       "3    O=S(=O)(C1=CC=CC=C1)N1CCN(C2=NOC3=CC=CC(Cl)=C2...   \n",
-       "4    CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...   \n",
-       "..                                                 ...   \n",
-       "992  CCCN1C(C2=CN=C(NC3=CC=C(C)N=C3)C(Cl)=C2)=NC2=C...   \n",
-       "993   CN(CC1=CC=CC2=CC=CC=C12)CN1N=C(C2=CC=NC=C2)OC1=O   \n",
-       "994  O=C(N[C@@H](CSCC1=CC=CC=C1)C(=O)NC1=CC=C(C2S/C...   \n",
-       "995  CN1CC[C@]23CCCC[C@H]2[C@H]1CC1=CC=C(OC2=CC=CC=...   \n",
-       "996  O=C(CN1C(=O)/C(=C/C2=CC=CO2)SC1=S)NC1=CC=C(C(=...   \n",
+       "                                              smiles  \\\n",
+       "0                       CCCCNC(=S)N/N=C/C1=C(C)C=CS1   \n",
+       "1         CN1C(SCC2=NC(C3=CC=CS3)=NO2)=NN=C1C1CCCCC1   \n",
+       "2           O=C(O)CC(NC(=O)C1=CN=CC=N1)C1=CC=CC=C1Cl   \n",
+       "3  O=S(=O)(C1=CC=CC=C1)N1CCN(C2=NOC3=CC=CC(Cl)=C2...   \n",
+       "4  CCC[C@@H](C)N(C1=CC(Cl)=CC=C1CO)S(=O)(=O)C1=CC...   \n",
        "\n",
-       "                                   standardised_smiles  \n",
-       "0                             CCCCNC(=S)N/N=C/c1sccc1C  \n",
-       "1                Cn1c(SCc2nc(-c3cccs3)no2)nnc1C1CCCCC1  \n",
-       "2                   O=C(O)CC(NC(=O)c1cnccn1)c1ccccc1Cl  \n",
-       "3         O=S(=O)(c1ccccc1)N1CCN(c2noc3cccc(Cl)c23)CC1  \n",
-       "4    CCC[C@@H](C)N(c1cc(Cl)ccc1CO)S(=O)(=O)c1ccc(C)cc1  \n",
-       "..                                                 ...  \n",
-       "992  CCCn1c(-c2cnc(Nc3ccc(C)nc3)c(Cl)c2)nc2cccc(Cl)c21  \n",
-       "993           CN(Cc1cccc2ccccc12)Cn1nc(-c2ccncc2)oc1=O  \n",
-       "994  O=C(N[C@@H](CSCc1ccccc1)C(=O)Nc1ccc(C2S/C(=N\\c...  \n",
-       "995  CN1CC[C@]23CCCC[C@H]2[C@H]1Cc1ccc(Oc2ccccc2F)cc13  \n",
-       "996  O=C(CN1C(=O)/C(=C/c2ccco2)SC1=S)Nc1ccc(C(=O)O)...  \n",
-       "\n",
-       "[997 rows x 2 columns]"
+       "                                 standardised_smiles  \n",
+       "0                           CCCCNC(=S)N/N=C/c1sccc1C  \n",
+       "1              Cn1c(SCc2nc(-c3cccs3)no2)nnc1C1CCCCC1  \n",
+       "2                 O=C(O)CC(NC(=O)c1cnccn1)c1ccccc1Cl  \n",
+       "3       O=S(=O)(c1ccccc1)N1CCN(c2noc3cccc(Cl)c23)CC1  \n",
+       "4  CCC[C@@H](C)N(c1cc(Cl)ccc1CO)S(=O)(=O)c1ccc(C)cc1  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,12 +429,12 @@
     "# df = df[df['standardised_smiles'] != 'NaN']\n",
     "df = df.dropna().copy()\n",
     "df.reset_index(drop=True, inplace=True)\n",
-    "df\n"
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -801,13 +598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
     "# In this codeblock I will save the data as a .csv file containing only the standard smiles and the inchikey as columns. \n",
     "# All data will be saved with informative names in the /data folder\n",
-    "\n"
+    "\n",
+    "processed_df.to_csv('../data/processed_input.csv', index=False)"
    ]
   },
   {
@@ -825,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In this codeblock I will load the predictions I've run on Ersilia and saved in the /data folder"
+    "# In this codeblock I will load the predictions I've run on Ersilia and saved in the /data folder\n"
    ]
   },
   {
