changes in markdown

--- a/notebooks/00_model_bias.ipynb
+++ b/notebooks/00_model_bias.ipynb
@@ -624,9 +624,9 @@
    "source": [
     "##### After cleaning up the data, I run the model on the processed data (`processed_input.csv`). Here's the sequence of commands I used:\n",
     "```\n",
-    "ersilia -v fetch eos30gr --from_github\r\n",
-    "ersilia serve eos30gr\r\n",
-    "ersilia -v api run -i processed_input.csv -o output.c\n",
+    "ersilia -v fetch eos30gr --from_github\n",
+    "ersilia serve eos30gr\n",
+    "ersilia -v api run -i processed_input.csv -o output.csv\n",
     "\n",
     "```\n",
     "\n",
